# qqexample

./: .dockerignore  .gitignore  Dockerfile  command.py  csend.py  cworker.py  cworker.sh  docker-compose.yaml  fapimain.py  fastapi.sh  pyproject.toml  readme.rst
qqe/: __init__.py
qqe/app/: app.py  settings.py
qqe/capp/: __init__.py  tasks.py
qqe/fapi/: __init__.py
qqe/sample/: models.py
